# Phygitalism_test

./: .env  .pre-commit-config.yaml  README.md  docker-compose.test.yaml  docker-compose.yaml
backend/: Dockerfile  start.sh  tests-start.sh
backend/app/: prestart.sh  pyproject.toml
backend/app/alembic/: env.py
backend/app/alembic/versions/: 2eb334db4587_first_revision.py  e1490912e908_add_on_delete_cascade.py
backend/app/app/api/: deps.py
backend/app/app/api/api_v1/: api.py
backend/app/app/api/api_v1/endpoints/: login.py  notes.py  users.py
backend/app/app/core/: config.py
backend/app/app/crud/: base.py  crud_note.py  crud_user.py
backend/app/app/db/: base.py  init_db.py  session.py
backend/app/app/models/: note.py  user.py
backend/app/app/schemas/: __init__.py  note.py
backend/app/app/tests/: conftest.py
backend/app/app/tests/api/api_v1/: test_items.py  test_users.py
backend/app/app/tests/crud/: test_item.py  test_user.py
backend/app/app/tests/utils/: note.py  user.py  utils.py
nginx/: nginx.conf
nginx/configs/: site.conf
