[tool.poetry]
name = "notes-api"
version = "0.1.0"
description = "Notes API"
authors = ["Admin <admin@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.21.1"
gunicorn = "^20.1.0"
fastapi = "^0.95.0"
SQLAlchemy = "^2.0.7"
alembic = "^1.10.2"
psycopg2 = "^2.9.5"
tenacity = "^8.2.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic = {extras = ["email"], version = "^1.10.7"}
asyncpg = "^0.27.0"
python-multipart = "^0.0.6"
websockets = "^10.4"
pytest-cov = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
httpx = "^0.23.3"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Configuration for various linters, formatters, checkers etc.
[tool.black]
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
filter_files = true
